@@ -1,3 +1,8 @@
+ 2015-02-01 16:43  egorpugin 
+   M examples/CMakeLists.txt
+   M src/CMakeLists.txt
+[build] [cmake] Move some projects to Boot folder. Improve generating of build_msg and codes. Fix Windows issue with databases.
+
  2015-01-31 15:04  egorpugin 
    M src/common/isc_file.cpp
 [build] Fix OS X build: removed extra qualification on member Mnt().
